--- a/index.html
+++ b/index.html
@@ -3,59 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>搞怪网站</title>
+    <title>世界上最最最最最强大的黄先生和他的小弟们</title>
     <style>
         body {
-            font-family: Comic Sans MS, cursive, sans-serif;
-            background-color: #ffeb3b;
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
             color: #333;
             margin: 0;
             padding: 20px;
-        }
-        header, footer {
             text-align: center;
-            padding: 20px;
-            background-color: #ff9800;
-            border-radius: 15px;
         }
-        main {
-            max-width: 800px;
-            margin: 0 auto;
+        h1 {
+            font-size: 2.5em;
+            font-weight: bold;
+            color: #ff4500;
         }
-        section {
-            margin-bottom: 30px;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        .names {
+            margin-top: 50px;
         }
-        nav {
-            margin-bottom: 20px;
-        }
-        nav a {
-            margin: 0 10px;
+        .names a {
+            display: block;
+            font-size: 1.5em;
+            font-weight: bold;
+            margin: 20px 0;
             text-decoration: none;
             color: #333;
-            font-weight: bold;
+        }
+        .names a:hover {
+            color: #ff4500;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>搞怪网站</h1>
-        <nav>
-            <a href="index.html">主页</a>
-            <a href="funny.html">搞笑页面</a>
-        </nav>
-    </header>
-    <main>
-        <section id="welcome">
-            <h2>欢迎来到搞怪网站</h2>
-            <p>这是一个充满幽默和搞笑内容的网站，希望你能在这里找到欢乐。</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 搞怪网站</p>
-    </footer>
+    <h1>世界上最最最最最强大的黄先生和他的小弟们</h1>
+    <img src="main-image.jpg" alt="Main Image" width="300">
+    <p>现在，我们将会看到这个世界上最最最最最强大的五人组，它名为！————【世界上最最最最最强大的黄先生和他的小弟们】</p>
+    <div class="names">
+        <a href="hu_xingyu.html">胡星宇</a>
+        <a href="chen_shuni.html">陈淑妮</a>
+        <a href="zhou_chengguo.html">周成果</a>
+        <a href="sun_yuqi.html">孙宇琪</a>
+        <a href="huang_yinjiang.html">黄银江</a>
+    </div>
 </body>
 </html>
