--- a/zhou_chengguo.html
+++ b/zhou_chengguo.html
@@ -22,7 +22,7 @@
 <body>
     <h1>周成果</h1>
     <img src="zhou_chengguo_image.jpg" alt="周成果" width="300">
-    <p>好了好了，屏幕前的这位先生或者女士，慢慢的我们的介绍环节也要进入高潮了！这位选手来自蓝星！他是这个星球上第二有谋略的战术大师（第一当然是黄先生），他是一位极其全能的选手！！！他擅长各个位置，是一个花心男人！！！总在多个角色之间游走，没有固定的喜好，但是关键时刻他总能挺身而出，为了团队的胜利做出贡献，他可能不是一个好男人，但是他一定是一个好手下！小周！他！就是黄先生手底下最坚固的盾！！！</p>
+    <p>好了好了，屏幕前的这位先生或者女士，慢慢的我们的介绍环节也要进入高潮了！这位选手来自蓝星！他是这个星球上第二有谋略的战术大师（第一当然是黄先生），他是一位极其全能的选手！！！他还是这个世界上最最最最最纯情的男大学生！！！他擅长各个位置，是一个花心男人！！！总在多个角色之间游走，没有固定的喜好，但是关键时刻他总能挺身而出，为了团队的胜利做出贡献，他可能不是一个好男人，但是他一定是一个好手下！小周！他！就是黄先生手底下最坚固的盾！！！</p>
     <a href="index.html">返回主页</a>
 </body>
 </html>
