--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>世界上最最最最最强大的黄先生和他的小弟们</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background: linear-gradient(to right, #ff7e5f, #feb47b);
             color: #333;
             margin: 0;
             padding: 20px;
@@ -16,7 +16,8 @@
         h1 {
             font-size: 2.5em;
             font-weight: bold;
-            color: #ff4500;
+            color: #ffffff;
+            text-shadow: 3px 3px #ff4500;
         }
         .names {
             margin-top: 50px;
@@ -27,17 +28,27 @@
             font-weight: bold;
             margin: 20px 0;
             text-decoration: none;
-            color: #333;
+            color: #ffffff;
+            transition: color 0.3s;
         }
         .names a:hover {
             color: #ff4500;
+        }
+        .intro-text {
+            font-size: 1.2em;
+            margin: 20px auto;
+            max-width: 600px;
+            line-height: 1.5;
         }
     </style>
 </head>
 <body>
     <h1>世界上最最最最最强大的黄先生和他的小弟们</h1>
-    <img src="main-image.jpg" alt="Main Image" width="300">
-    <p>现在，我们将会看到这个世界上最最最最最强大的五人组，它名为！————【世界上最最最最最强大的黄先生和他的小弟们】</p>
+    <img src="main_image.jpg" alt="Main Image" width="300">
+    <div class="intro-text">
+        现在，我们将会看到这个世界上最最最最最强大的五人组，它名为！
+        ————【世界上最最最最最强大的黄先生和他的小弟们】
+    </div>
     <div class="names">
         <a href="hu_xingyu.html">胡星宇</a>
         <a href="chen_shuni.html">陈淑妮</a>
