--- a/chen_shuni.html
+++ b/chen_shuni.html
@@ -6,23 +6,51 @@
     <title>陈淑妮</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #e0ffff;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background: linear-gradient(to right, #e0ffff, #afeeee);
             color: #333;
             margin: 0;
             padding: 20px;
             text-align: center;
         }
         h1 {
-            font-size: 2em;
+            font-size: 2.5em;
             color: #00ced1;
+            text-shadow: 2px 2px #20b2aa;
+        }
+        p {
+            font-size: 1.2em;
+            color: #4b0082;
+            border: 2px solid #000;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: #ffffff80;
+            line-height: 1.5;
+            max-width: 600px;
+            margin: 20px auto;
+        }
+        .highlight {
+            color: #ff4500;
+            font-weight: bold;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .container img {
+            margin: 10px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
     </style>
 </head>
 <body>
     <h1>陈淑妮</h1>
-    <img src="chen_shuni_image.jpg" alt="陈淑妮" width="300">
-    <p>接下来让我们睁大眼睛看看，来自蓝星！！！的一位极其强大的女特种兵！她身手矫健，灵活多变，常活跃基站附近，与医师次元为伍，总能在意想不到的时候站出来！拯救团队于水深火热之中，她！是黄先生手底下最强大的药！</p>
-    <a href="index.html">返回主页</a>
+    <div class="container">
+        <img src="chen_shuni_image.jpg" alt="陈淑妮" width="300">
+        <p>接下来让我们睁大眼睛看看，来自蓝星！！！的一位极其强大的女特种兵！<br>她身手矫健，灵活多变，常活跃基站附近，与医师次元为伍，总能在意想不到的时候站出来！<br>拯救团队于水深火热之中，她！是黄先生手底下最强大的药！</p>
+        <a href="index.html">返回主页</a>
+    </div>
 </body>
 </html>
