--- a/zhou_chengguo.html
+++ b/zhou_chengguo.html
@@ -6,23 +6,51 @@
     <title>周成果</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #fafad2;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background: linear-gradient(to right, #fafad2, #f0e68c);
             color: #333;
             margin: 0;
             padding: 20px;
             text-align: center;
         }
         h1 {
-            font-size: 2em;
+            font-size: 2.5em;
             color: #daa520;
+            text-shadow: 2px 2px #b8860b;
+        }
+        p {
+            font-size: 1.2em;
+            color: #4b0082;
+            border: 2px solid #000;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: #ffffff80;
+            line-height: 1.5;
+            max-width: 600px;
+            margin: 20px auto;
+        }
+        .highlight {
+            color: #ff4500;
+            font-weight: bold;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .container img {
+            margin: 10px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
     </style>
 </head>
 <body>
     <h1>周成果</h1>
-    <img src="zhou_chengguo_image.jpg" alt="周成果" width="300">
-    <p>好了好了，屏幕前的这位先生或者女士，慢慢的我们的介绍环节也要进入高潮了！这位选手来自蓝星！他是这个星球上第二有谋略的战术大师（第一当然是黄先生），他是一位极其全能的选手！！！他还是这个世界上最最最最最纯情的男大学生！！！他擅长各个位置，是一个花心男人！！！总在多个角色之间游走，没有固定的喜好，但是关键时刻他总能挺身而出，为了团队的胜利做出贡献，他可能不是一个好男人，但是他一定是一个好手下！小周！他！就是黄先生手底下最坚固的盾！！！</p>
-    <a href="index.html">返回主页</a>
+    <div class="container">
+        <img src="zhou_chengguo_image.jpg" alt="周成果" width="300">
+        <p>好了好了，屏幕前的这位先生或者女士，慢慢的我们的介绍环节也要进入高潮了！<br>这位选手来自蓝星！他是这个星球上第二有谋略的战术大师（第一当然是黄先生），他是一位极其全能的选手！！！<br>他擅长各个位置，是一个花心男人！！！总在多个角色之间游走，没有固定的喜好，但是关键时刻他总能挺身而出，为了团队的胜利做出贡献，<br>他可能不是一个好男人，但是他一定是一个好手下！小周！他！就是黄先生手底下最坚固的盾！！！</p>
+        <a href="index.html">返回主页</a>
+    </div>
 </body>
 </html>
