--- a/sun_yuqi.html
+++ b/sun_yuqi.html
@@ -6,23 +6,51 @@
     <title>孙宇琪</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #d8bfd8;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background: linear-gradient(to right, #d8bfd8, #dda0dd);
             color: #333;
             margin: 0;
             padding: 20px;
             text-align: center;
         }
         h1 {
-            font-size: 2em;
+            font-size: 2.5em;
             color: #9400d3;
+            text-shadow: 2px 2px #8a2be2;
+        }
+        p {
+            font-size: 1.2em;
+            color: #4b0082;
+            border: 2px solid #000;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: #ffffff80;
+            line-height: 1.5;
+            max-width: 600px;
+            margin: 20px auto;
+        }
+        .highlight {
+            color: #ff4500;
+            font-weight: bold;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .container img {
+            margin: 10px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
     </style>
 </head>
 <body>
     <h1>孙宇琪</h1>
-    <img src="sun_yuqi_image.jpg" alt="孙宇琪" width="300">
-    <p>他！！！来自于神秘古老伟大的五星村落！从小便展现了惊人的战斗力！虽然他的实力很强，但是他的骄傲自满，粗心大意正在逐渐摧毁原本那个充满天赋的他...所幸他遇到了黄先生！黄先生于迷雾之中为他指点迷津，于战场之上为他守护性命，于九天之上为他脱骨洗髓，他终于才脱胎换骨！他！孙宇琪！就是黄先生最最最最最忠诚的小弟！！！</p>
-    <a href="index.html">返回主页</a>
+    <div class="container">
+        <img src="sun_yuqi_image.jpg" alt="孙宇琪" width="300">
+        <p>他！！！来自于神秘古老伟大的五星村落！<br>从小便展现了惊人的战斗力！虽然他的实力很强，但是他的骄傲自满，粗心大意正在逐渐摧毁原本那个充满天赋的他...<br>所幸他遇到了黄先生！黄先生于迷雾之中为他指点迷津，于战场之上为他守护性命，于九天之上为他脱骨洗髓，<br>他终于才脱胎换骨！他！孙宇琪！就是黄先生最最最最最忠诚的小弟！！！</p>
+        <a href="index.html">返回主页</a>
+    </div>
 </body>
 </html>
