--- a/huang_yinjiang.html
+++ b/huang_yinjiang.html
@@ -6,8 +6,8 @@
     <title>黄银江</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #fffacd;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background: linear-gradient(to right, #fffacd, #f0e68c);
             color: #333;
             margin: 0;
             padding: 20px;
@@ -16,14 +16,42 @@
         h1 {
             font-size: 2.5em;
             color: #ff4500;
+            text-shadow: 3px 3px #ff6347;
             font-weight: bold;
+        }
+        p {
+            font-size: 1.2em;
+            color: #4b0082;
+            border: 2px solid #000;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: #ffffff80;
+            line-height: 1.5;
+            max-width: 600px;
+            margin: 20px auto;
+        }
+        .highlight {
+            color: #ff4500;
+            font-weight: bold;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .container img {
+            margin: 10px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
     </style>
 </head>
 <body>
     <h1>黄银江</h1>
-    <img src="huang_yinjiang_image.jpg" alt="黄银江" width="300">
-    <p>黄银江。世人皆知其本名，只因他实在太过闻名！！！但在公众场合下没人敢提及他的大名！只因为他的实力太过恐怖！根据银河千万纪元宝典记载，黄先生于亿万年前诞生于银河最中央的位置，得天地灵气，汲宇宙精华，一出生便是宇宙之最！！！经过亿万年的征战，黄先生已经无敌于世！他感觉到了生活的无聊，于是开始云游四海，来到了蓝星，在这里！他收获的他的矛！药！盾！小弟！！！他们组成了强大的组合，他们纵横刺激战场无人能敌！！！黄先生的影响力我们有目共睹！！！他就是这个世界上最最最最最强大威武霸气牛逼帅气英俊潇洒无敌可怕战神一般的男人！！！他还是上赛季38星无敌战神，单排火箭淘汰分9000分，淘汰榜榜一火箭，极品ID松熙影！！！！！</p>
-    <a href="index.html">返回主页</a>
+    <div class="container">
+        <img src="huang_yinjiang_image.jpg" alt="黄银江" width="300">
+        <p>黄银江。世人皆知其本名，只因他实在太过闻名！！！<br>但在公众场合下没人敢提及他的大名！只因为他的实力太过恐怖！<br>根据银河千万纪元宝典记载，黄先生于亿万年前诞生于银河最中央的位置，得天地灵气，汲宇宙精华，<br>一出生便是宇宙之最！！！经过亿万年的征战，黄先生已经无敌于世！<br>他感觉到了生活的无聊，于是开始云游四海，来到了蓝星，在这里！<br>他收获的他的矛！药！盾！小弟！！！他们组成了强大的组合，他们纵横刺激战场无人能敌！！！<br>黄先生的影响力我们有目共睹！！！他就是这个世界上最最最最最强大威武霸气牛逼帅气英俊潇洒无敌可怕战神一般的男人！！！</p>
+        <a href="index.html">返回主页</a>
+    </div>
 </body>
 </html>
