--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <h1>世界上最最最最最强大的黄先生和他的小弟们</h1>
-    <img src="main_image.jpg" alt="Main Image" width="300">
+    <img src="main-image.jpg" alt="Main Image" width="300">
     <div class="intro-text">
         现在，我们将会看到这个世界上最最最最最强大的五人组，它名为！
         ————【世界上最最最最最强大的黄先生和他的小弟们】
